// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Items should render 1`] = `
<ItemsComponent
  getItemHeight={[Function]}
  isSwitchBox={false}
  items={
    Array [
      Object {
        "label": "Lorem ipsum dolor sit amet 0",
      },
      Object {
        "checked": true,
        "label": "Lorem ipsum dolor sit amet 1",
      },
      Object {
        "label": "Lorem ipsum dolor sit amet 2",
      },
    ]
  }
  showToggleAll={true}
  t={[Function]}
>
  <div
    className="theme-tc-listview-items tc-listview-items"
  >
    <AutoSizer
      disableHeight={false}
      disableWidth={false}
      onResize={[Function]}
      style={Object {}}
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <List
          autoHeight={false}
          className="theme-tc-list-items tc-list-items"
          estimatedRowSize={30}
          height={0}
          items={
            Array [
              Object {
                "label": "Lorem ipsum dolor sit amet 0",
              },
              Object {
                "checked": true,
                "label": "Lorem ipsum dolor sit amet 1",
              },
              Object {
                "label": "Lorem ipsum dolor sit amet 2",
              },
            ]
          }
          noRowsRenderer={[Function]}
          onRowsRendered={[Function]}
          onScroll={[Function]}
          overscanIndicesGetter={[Function]}
          overscanRowCount={10}
          rowCount={4}
          rowHeight={[Function]}
          rowRenderer={[Function]}
          scrollToAlignment="auto"
          scrollToIndex={-1}
          style={Object {}}
          width={0}
        >
          <Grid
            aria-label="grid"
            aria-readonly={true}
            autoContainerWidth={true}
            autoHeight={false}
            autoWidth={false}
            cellRangeRenderer={[Function]}
            cellRenderer={[Function]}
            className="ReactVirtualized__List theme-tc-list-items tc-list-items"
            columnCount={1}
            columnWidth={0}
            containerRole="rowgroup"
            containerStyle={Object {}}
            estimatedColumnSize={100}
            estimatedRowSize={30}
            getScrollbarSize={[Function]}
            height={0}
            items={
              Array [
                Object {
                  "label": "Lorem ipsum dolor sit amet 0",
                },
                Object {
                  "checked": true,
                  "label": "Lorem ipsum dolor sit amet 1",
                },
                Object {
                  "label": "Lorem ipsum dolor sit amet 2",
                },
              ]
            }
            noContentRenderer={[Function]}
            noRowsRenderer={[Function]}
            onRowsRendered={[Function]}
            onScroll={[Function]}
            onScrollbarPresenceChange={[Function]}
            onSectionRendered={[Function]}
            overscanColumnCount={0}
            overscanIndicesGetter={[Function]}
            overscanRowCount={10}
            role="grid"
            rowCount={4}
            rowHeight={[Function]}
            rowRenderer={[Function]}
            scrollToAlignment="auto"
            scrollToColumn={-1}
            scrollToIndex={-1}
            scrollToRow={-1}
            scrollingResetTimeInterval={150}
            style={Object {}}
            tabIndex={0}
            width={0}
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid ReactVirtualized__List theme-tc-list-items tc-list-items"
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 0,
                  "overflowX": "hidden",
                  "overflowY": "auto",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            />
          </Grid>
        </List>
      </div>
    </AutoSizer>
  </div>
</ItemsComponent>
`;

exports[`Items should render with nested items 1`] = `
<ItemsComponent
  getItemHeight={[Function]}
  isSwitchBox={false}
  items={
    Array [
      Object {
        "label": "Lorem ipsum dolor default",
      },
      Object {
        "checked": true,
        "children": Array [
          Object {
            "label": "Lorem ipsum dolor sit amet 0",
          },
          Object {
            "checked": true,
            "label": "Lorem ipsum dolor sit amet 1",
          },
          Object {
            "label": "Lorem ipsum dolor sit amet 2",
          },
        ],
        "label": "Lorem ipsum dolor Parent",
      },
    ]
  }
  showToggleAll={true}
  t={[Function]}
>
  <div
    className="theme-tc-listview-items tc-listview-items"
  >
    <AutoSizer
      disableHeight={false}
      disableWidth={false}
      onResize={[Function]}
      style={Object {}}
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <List
          autoHeight={false}
          className="theme-tc-list-items tc-list-items"
          estimatedRowSize={30}
          height={0}
          items={
            Array [
              Object {
                "label": "Lorem ipsum dolor default",
              },
              Object {
                "checked": true,
                "children": Array [
                  Object {
                    "label": "Lorem ipsum dolor sit amet 0",
                  },
                  Object {
                    "checked": true,
                    "label": "Lorem ipsum dolor sit amet 1",
                  },
                  Object {
                    "label": "Lorem ipsum dolor sit amet 2",
                  },
                ],
                "label": "Lorem ipsum dolor Parent",
              },
            ]
          }
          noRowsRenderer={[Function]}
          onRowsRendered={[Function]}
          onScroll={[Function]}
          overscanIndicesGetter={[Function]}
          overscanRowCount={10}
          rowCount={3}
          rowHeight={[Function]}
          rowRenderer={[Function]}
          scrollToAlignment="auto"
          scrollToIndex={-1}
          style={Object {}}
          width={0}
        >
          <Grid
            aria-label="grid"
            aria-readonly={true}
            autoContainerWidth={true}
            autoHeight={false}
            autoWidth={false}
            cellRangeRenderer={[Function]}
            cellRenderer={[Function]}
            className="ReactVirtualized__List theme-tc-list-items tc-list-items"
            columnCount={1}
            columnWidth={0}
            containerRole="rowgroup"
            containerStyle={Object {}}
            estimatedColumnSize={100}
            estimatedRowSize={30}
            getScrollbarSize={[Function]}
            height={0}
            items={
              Array [
                Object {
                  "label": "Lorem ipsum dolor default",
                },
                Object {
                  "checked": true,
                  "children": Array [
                    Object {
                      "label": "Lorem ipsum dolor sit amet 0",
                    },
                    Object {
                      "checked": true,
                      "label": "Lorem ipsum dolor sit amet 1",
                    },
                    Object {
                      "label": "Lorem ipsum dolor sit amet 2",
                    },
                  ],
                  "label": "Lorem ipsum dolor Parent",
                },
              ]
            }
            noContentRenderer={[Function]}
            noRowsRenderer={[Function]}
            onRowsRendered={[Function]}
            onScroll={[Function]}
            onScrollbarPresenceChange={[Function]}
            onSectionRendered={[Function]}
            overscanColumnCount={0}
            overscanIndicesGetter={[Function]}
            overscanRowCount={10}
            role="grid"
            rowCount={3}
            rowHeight={[Function]}
            rowRenderer={[Function]}
            scrollToAlignment="auto"
            scrollToColumn={-1}
            scrollToIndex={-1}
            scrollToRow={-1}
            scrollingResetTimeInterval={150}
            style={Object {}}
            tabIndex={0}
            width={0}
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid ReactVirtualized__List theme-tc-list-items tc-list-items"
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 0,
                  "overflowX": "hidden",
                  "overflowY": "auto",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            />
          </Grid>
        </List>
      </div>
    </AutoSizer>
  </div>
</ItemsComponent>
`;

exports[`Items should render with provided id 1`] = `
<ItemsComponent
  getItemHeight={[Function]}
  id="my-widget"
  isSwitchBox={false}
  items={
    Array [
      Object {
        "label": "Lorem ipsum dolor sit amet 0",
      },
      Object {
        "checked": true,
        "label": "Lorem ipsum dolor sit amet 1",
      },
      Object {
        "label": "Lorem ipsum dolor sit amet 2",
      },
    ]
  }
  showToggleAll={true}
  t={[Function]}
>
  <div
    className="theme-tc-listview-items tc-listview-items"
  >
    <AutoSizer
      disableHeight={false}
      disableWidth={false}
      onResize={[Function]}
      style={Object {}}
    >
      <div
        style={
          Object {
            "height": 0,
            "overflow": "visible",
            "width": 0,
          }
        }
      >
        <List
          autoHeight={false}
          className="theme-tc-list-items tc-list-items"
          estimatedRowSize={30}
          height={0}
          items={
            Array [
              Object {
                "label": "Lorem ipsum dolor sit amet 0",
              },
              Object {
                "checked": true,
                "label": "Lorem ipsum dolor sit amet 1",
              },
              Object {
                "label": "Lorem ipsum dolor sit amet 2",
              },
            ]
          }
          noRowsRenderer={[Function]}
          onRowsRendered={[Function]}
          onScroll={[Function]}
          overscanIndicesGetter={[Function]}
          overscanRowCount={10}
          rowCount={4}
          rowHeight={[Function]}
          rowRenderer={[Function]}
          scrollToAlignment="auto"
          scrollToIndex={-1}
          style={Object {}}
          width={0}
        >
          <Grid
            aria-label="grid"
            aria-readonly={true}
            autoContainerWidth={true}
            autoHeight={false}
            autoWidth={false}
            cellRangeRenderer={[Function]}
            cellRenderer={[Function]}
            className="ReactVirtualized__List theme-tc-list-items tc-list-items"
            columnCount={1}
            columnWidth={0}
            containerRole="rowgroup"
            containerStyle={Object {}}
            estimatedColumnSize={100}
            estimatedRowSize={30}
            getScrollbarSize={[Function]}
            height={0}
            items={
              Array [
                Object {
                  "label": "Lorem ipsum dolor sit amet 0",
                },
                Object {
                  "checked": true,
                  "label": "Lorem ipsum dolor sit amet 1",
                },
                Object {
                  "label": "Lorem ipsum dolor sit amet 2",
                },
              ]
            }
            noContentRenderer={[Function]}
            noRowsRenderer={[Function]}
            onRowsRendered={[Function]}
            onScroll={[Function]}
            onScrollbarPresenceChange={[Function]}
            onSectionRendered={[Function]}
            overscanColumnCount={0}
            overscanIndicesGetter={[Function]}
            overscanRowCount={10}
            role="grid"
            rowCount={4}
            rowHeight={[Function]}
            rowRenderer={[Function]}
            scrollToAlignment="auto"
            scrollToColumn={-1}
            scrollToIndex={-1}
            scrollToRow={-1}
            scrollingResetTimeInterval={150}
            style={Object {}}
            tabIndex={0}
            width={0}
          >
            <div
              aria-label="grid"
              aria-readonly={true}
              className="ReactVirtualized__Grid ReactVirtualized__List theme-tc-list-items tc-list-items"
              onScroll={[Function]}
              role="grid"
              style={
                Object {
                  "WebkitOverflowScrolling": "touch",
                  "boxSizing": "border-box",
                  "direction": "ltr",
                  "height": 0,
                  "overflowX": "hidden",
                  "overflowY": "auto",
                  "position": "relative",
                  "width": 0,
                  "willChange": "transform",
                }
              }
              tabIndex={0}
            />
          </Grid>
        </List>
      </div>
    </AutoSizer>
  </div>
</ItemsComponent>
`;
